[tool.poetry]
name = "hkage"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.0"

[tool.ruff]
ignored = ['E501']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
